Fix DCHECK error.

Because the mini container can be starting before login,
when ArcSessionManager is initialized, ArcSessionRunner::IsStopped()
may return false.
As it is OK to remove the data while mini container is running,
fix DCHECK condition not to fail.

BUG=chromium:757498
TEST=Ran locally. Ran bots.

Change-Id: I8a988b7e87d9035bb1475e4b809135c745049f51