components/arc/arc_session_runner.cc
@@ -142,6 +142,11 @@ bool ArcSessionRunner::IsStopped() const {
   return state_ == State::STOPPED;
 }
 
+bool ArcSessionRunner::IsLoginScreenInstanceStarting() const {
+  DCHECK_CALLED_ON_VALID_THREAD(thread_checker_);
+  return state_ == State::STARTING_FOR_LOGIN_SCREEN;
+}
+
 void ArcSessionRunner::SetRestartDelayForTesting(
     const base::TimeDelta& restart_delay) {
   DCHECK_EQ(state_, State::STOPPED);
